This file shows the changes in this release of xPDO.

- [#5306] Add xPDOQuery->distinct() method
- Change xPDO::getService() method to indicate it returns a reference
- Avoid unsetting the current package if xPDO->addPackage() fails
- Avoid updates to existing package definitions unless path/prefix changes
- Remove redundant call to $this->setPackageMeta() in xPDO->setPackage()
- Ensure xPDO::$classMap derivative entries are unique
- [#5197] Provide map of derivative classes for introspection
- [#5147] Fix xPDOIterator ignoring criteria that is not already an object

xPDO 2.1.5-pl (July 5, 2011)
====================================
- [#5084] Fix various xPDO::exec() calls to check for false value properly
- [#4877] Fix nested conjunctions infecting parent conjunctions
- [#5042] Prevent additional columns defined in derivative classes being marked lazy

xPDO 2.1.4-pl (May 23, 2011)
====================================
- Default cacheFlag to true in getObject/getCollection/getIterator methods
- [#4787] Add ability to determine the table class of derivatives
- [#4772] Do not flush related objects from cache on read operations
- [#4682] Fix support for driver-specific attributes on object element in schema

xPDO 2.1.3-pl (May 3, 2011)
====================================
- [#4577] Remove calls to xPDO->log() in xPDOCacheManager->writeFile()
- Add options to xPDOCacheManager::writeFile() to allow multiple attempts when exclusive locks fail

xPDO 2.1.2-pl (March 25, 2011)
====================================
- Add xPDO->getValue() convenience method for retrieving single column from single row
- [#4128] Fix Windows drive issue in xPDOTransport->pack()
- [#4125] Fix bug getting composites in xPDOObject->getFKClass()
- [#4097] Make constraint names unique for sqlsrv
- [#4047] Fix bug adding single file to zip in xPDOZip
- [#3971] Add xPDOManager API for manipulating table structures

xPDO 2.1.1-pl2 (February 21, 2011)
====================================