@@ -70,7 +70,9 @@ class xPDOQuery_sqlite extends xPDOQuery {
             $sql.= implode(', ', $columns);
             $sql.= ' ';
         }
-        $sql.= 'FROM ';
+        if ($command != 'UPDATE') {
+            $sql.= 'FROM ';
+        }
         $tables= array ();
         foreach ($this->query['from']['tables'] as $table) {
             if ($command != 'SELECT') {
@@ -88,6 +90,24 @@ class xPDOQuery_sqlite extends xPDOQuery {
                     $sql.= $this->buildConditionalClause($join['conditions']);
                     $sql.= ' ';
                 }
+            }
+        }
+        if ($command == 'UPDATE') {
+            if (!empty($this->query['set'])) {
+                reset($this->query['set']);
+                $clauses = array();
+                while (list($setKey, $setVal) = each($this->query['set'])) {
+                    $value = $setVal['value'];
+                    $type = $setVal['type'];
+                    if ($value !== null && in_array($type, array(PDO::PARAM_INT, PDO::PARAM_STR))) {
+                        $value = $this->xpdo->quote($value, $type);
+                    }
+                    $clauses[] = $this->xpdo->escape($setKey) . ' = ' . $value;
+                }
+                if (!empty($clauses)) {
+                    $sql.= 'SET ' . implode(', ', $clauses);
+                }
+                unset($clauses);
             }
         }
         if (!empty ($this->query['where'])) {
